Style fix code blocks spacing

--- a/src/scss/_prism.scss
+++ b/src/scss/_prism.scss
@@ -70,7 +70,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 
 pre[class*="language-"] {
   padding: 1em;
-  margin: 0.5em 0;
+  margin: 1.6rem 0;
   overflow: auto;
 }
 
